# LightSandbox

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  config.example.toml
.github/workflows/: ci.yml  release.yml
crates/lightsandbox-cli/: Cargo.toml
crates/lightsandbox-cli/src/: main.rs
crates/lightsandbox-cli/tests/: cli_tests.rs
crates/lightsandbox-core/: Cargo.toml
crates/lightsandbox-core/src/: error.rs  lib.rs  metrics.rs  models.rs  runtime.rs
crates/lightsandbox-runtime-docker/: Cargo.toml
crates/lightsandbox-runtime-docker/src/: lib.rs
crates/lightsandbox-runtime-local/: Cargo.toml
crates/lightsandbox-runtime-local/src/: lib.rs  metrics_collector.rs  paths.rs  persistence.rs  runtime.rs
crates/lightsandbox-runtime-local/tests/: runtime_tests.rs
crates/lightsandbox-server/: Cargo.toml
crates/lightsandbox-server/examples/: concurrent_sandboxes.rs
crates/lightsandbox-server/src/: api.rs  config.rs  e2b.rs  gc.rs  lib.rs  main.rs  state.rs
crates/lightsandbox-server/tests/: api_tests.rs  config_tests.rs  e2b_tests.rs  gc_tests.rs
docs/: PROJECT_SPEC.md  api.md  architecture.md  e2b-compat.md  quickstart.md  security.md
examples/code_execution_demo/: main.py
examples/python_agent_demo/: main.py
scripts/: install.ps1  install.sh
scripts/homebrew/: lightsandbox.rb
sdk/python/: README.md  pyproject.toml
sdk/python/lightsandbox/: __init__.py  client.py  exceptions.py  sandbox.py
sdk/python/tests/: conftest.py  test_client.py  test_exceptions.py
