[workspace]
resolver = "2"
members = [
    "crates/lightsandbox-core",
    "crates/lightsandbox-runtime-local",
    "crates/lightsandbox-runtime-docker",
    "crates/lightsandbox-server",
    "crates/lightsandbox-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dashmap = "6"
tokio-stream = "0.1"
futures-util = "0.3"
