[package]
name = "lightsandbox-runtime-docker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lightsandbox-core = { path = "../lightsandbox-core" }
tokio.workspace = true
async-trait.workspace = true
dashmap.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
