[package]
name = "lightsandbox-runtime-local"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lightsandbox-core = { path = "../lightsandbox-core" }
tokio.workspace = true
serde.workspace = true
chrono.workspace = true
async-trait.workspace = true
uuid.workspace = true
dashmap.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
