[package]
name = "lightsandbox-runtime-local"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lightsandbox-core = { path = "../lightsandbox-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
uuid.workspace = true
dashmap.workspace = true
tracing.workspace = true
redb = "4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

# Hand-rolled timing harness (benches/runtime.rs) with its own `main` — no
# `criterion` (it pulls `windows-sys`, which needs `dlltool` from MinGW
# binutils that this Windows-gnu toolchain lacks). Zero extra deps.
[[bench]]
name = "runtime"
harness = false
