[package]
name = "lightsandbox-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lightsandbox-core = { path = "../lightsandbox-core" }
lightsandbox-runtime-local = { path = "../lightsandbox-runtime-local" }
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
axum = { version = "0.7", features = ["multipart"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
clap.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[[example]]
name = "concurrent_sandboxes"
path = "examples/concurrent_sandboxes.rs"
