[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lightsandbox"
version = "0.1.0"
description = "Python SDK for LightSandbox, a lightweight zero-Docker sandbox execution layer for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["requests>=2.27,<3"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["lightsandbox*"]
